Updated ipynb file

--- a/Installation & Execution Guide.ipynb
+++ b/Installation & Execution Guide.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "#### conda env create -f qcl.yml \n",
     "\n",
-    "<img src=\"Screenshot 2025-10-25 155412.png\">\n",
+    "<img src=\"https://github.com/user-attachments/assets/d064aee4-0de9-4bc6-94d2-0c6dac08fbb9\" width=\"100%\">\n",
     "\n",
     "## Activate Environment and Run the Streamlit.py Application\n",
     "Activate the qcl Environment by using the following command:\n",
